# OpenPocket

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
docs/: 01-PROJECT-HANDOFF.md  03-FOLLOWUP-PROMPT.md  06-OPTIMIZATION-CHRONOLOGY.md  08-PREBAKE-WORKING-MODEL.md  08-TIME-DISPLAY-HANDOFF.md  HARDWARE.md  M6-APPWHEEL-PLAN.md  PERF-DUALCORE-PLAN.md  PIPELINE-PLAN.md  README.md  ROADMAP.md  W3-APP-SCREENS-PLAN.md  WATER-APP-PLAN.md  WHEEL-INSTANT-PLAN.md
docs/archive/: 02-ANIMATION-BOTTLENECK.md  04-SHADER-MATH-MAPPING.md  05-MEMORY-LINKER.md  07-PREBAKE-PIPELINE.md  09-BESPOKE-FRAMEBUFFER-PROMPT.md  Outdated-plan.txt
docs/research/: BOOT-BUTTON-RESEARCH.md  BUTTONS-RESEARCH.md  DIRECT-DRIVE-RESEARCH.md  PIPELINE-RESEARCH.md  TOUCH-PIPELINE-RESEARCH.md  WHEEL-FEEL-RESEARCH.md
docs/water/: IMPL-SPEC.md  design-falling-sand.md  design-flip-lite.md  design-heightfield.md  design-pairwise-hash.md  design-pic-grid.md  integration.md  judge-integration-perf.md  judge-overflow-correctness.md  judge-realism-feel.md  review-fixed-point-overflow.md  review-imu-calibration.md  review-integration-compile.md  review-perf-budget.md  review-physics-stability.md  water_draft.rs
src/: app.rs  board.rs  clock.rs  cloud.rs  display.rs  dmi.rs  drivers.rs  gradient.rs  input.rs  lib.rs  light_rays.rs  plasma.rs  prebake.rs  qspi_bus.rs  raidal.rs  scenes.rs  time.rs  trig.rs  watch_fb.rs
src/display/: qspi_bus.rs  watch_fb.rs
src/drivers/: axp2101.rs  cst9217.rs  pcf85063.rs  qmi8658.rs
src/input/: gestures.rs
src/scenes/: apps.rs  lock.rs  unlocked.rs  water.rs  wheel.rs
