[package]
edition      = "2024"
name         = "openpocket"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "openpocket"
path = "./src/bin/main.rs"

[[bin]]
name = "baker"
path = "src/bin/baker.rs"
required-features = ["baker"]

[features]
default = ["esp"]
esp = ["dep:esp-hal", "dep:esp-bootloader-esp-idf", "dep:critical-section", "dep:esp-alloc", "dep:esp-println"]
# prebake enables the high-FPS pre-baked animation player (implies esp)
prebake = ["esp"]
# baker enables the host-side asset generator tool (build with host target, NOT the ESP target)
baker = []

[dependencies]
esp-hal = { version = "~1.1.0", features = ["esp32s3", "unstable"], optional = true }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"], optional = true }

critical-section = { version = "1.2.0", optional = true }
esp-alloc        = { version = "0.10.0", optional = true }
esp-println = { version = "0.13", features = ["esp32s3", "critical-section"], optional = true }
libm        = "0.2"

[build-dependencies]
fontdue = "0.7"

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# Shader hot path needs speed even in dev flashes.
opt-level = 3

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 3
